# pathery

./: .gitignore  Cargo.toml  LICENSE  README.md  cdk.json  cspell.json  data.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  turbo.json
.changeset/: big-buckets-listen.md  brave-carrots-compare.md  config.json  dry-bears-care.md  few-stingrays-crash.md  fluffy-dolphins-type.md  gentle-turkeys-tickle.md  green-plants-greet.md  hungry-keys-hope.md  lemon-icons-sort.md  lemon-otters-beam.md  nine-spoons-call.md  pink-pumpkins-watch.md  six-cars-grin.md  soft-toys-grin.md  spicy-apes-cross.md  stale-clocks-think.md  stale-pumpkins-brake.md  swift-comics-repair.md  swift-terms-check.md  thirty-insects-juggle.md  tough-mice-confess.md  twenty-actors-flash.md  twenty-eyes-march.md  warm-keys-bathe.md  warm-planes-eat.md  wild-kangaroos-double.md
app/: cdk.context.json  cdk.json  package.json
app/src/: app-stack.ts  app.ts  pathery-stack.ts  stack.ts
cdk/: stack.ts
dev-env/: package.json
dev-env/src/: app.ts  stack.ts
doc/: api.md  get-started.md
examples/getting-started/: README.md  package.json
handlers/delete-doc/: Cargo.toml  package.json
handlers/delete-doc/src/: main.rs
handlers/hello/: Cargo.toml  package.json
handlers/index-writer-worker/: Cargo.toml
handlers/post-index/: Cargo.toml  package.json
handlers/query-index/: Cargo.toml  package.json
integration-test/: package.json
integration-test/src/: index-test-data.ts
pathery-core/: Cargo.toml
src/: main.rs
src/directory/: dynamo_directory.rs
(+9 files in other folders)
